k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pipelineiq-ingress
  namespace: pipelineiq
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
    - hosts:
        - api.pipelineiq.YOURDOMAIN.com
      secretName: pipelineiq-tls
  rules:
    - host: api.pipelineiq.YOURDOMAIN.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pipelineiq-api
                port:
                  number: 80
